[project]
name = "multi_pov"
version = "0.2.0"
description = "Default template for PDM package"
authors = [{ name = "hemakodaa", email = "hemakodaa@gmail.com" }]
dependencies = [
    "notable-moments==0.1.2",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
main = "python src/multi_pov/main.py"
